@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add 'Crossfire.Object.Race' attribute.
+ plugins/cfpython/cfpython_object.c
+ plugins/cfpython/include/cfpython_object_private.h
+Nicolas Weeger 2007-05-08
+
 New command: 'use <item> with <item>', which enables complex item transformation.
  doc/Developers/item_transformation
  include/sproto.h
